@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 /**
  * Writes and reads files
@@ -18,13 +17,13 @@ public class FileUtil {
     }
 
     /**
-     * Returns true if {@code path} can be converted into a {@code Path} via {@link Paths#get(String)},
+     * Returns true if {@code path} can be converted into a {@code Path} via {@link Path#of(String, String...)},
      * otherwise returns false.
      * @param path A string representing the file path. Cannot be null.
      */
     public static boolean isValidPath(String path) {
         try {
-            Paths.get(path);
+            Path.of(path);
         } catch (InvalidPathException ipe) {
             return false;
         }
